# Youtube-loader

./: .gitignore  ForBai.md  ForDeploy.md  README.md  YoutubeDownloader.py  docker-compose.yml  pyproject.toml  render.yaml  start.bat
backend-api/: .dockerignore  Dockerfile  Main.py  Procfile  Requirements.txt  autocleanup.py  build.sh  jobs.db
backend-api/api_models/: DownloadRequest.py
backend-api/api_routes/: DownloadRouter.py  FileRouter.py  StatusRouter.py
backend-api/config_settings/: AppConfig.py
backend-api/core_services/: FileStorageService.py  JobStorageService.py  YoutubeService.py
frontend-web/: Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend-web/public/: manifest.json  sw.js
frontend-web/src/app/: globals.css  layout.tsx  page.tsx
frontend-web/src/app/__tests__/: home.test.tsx
frontend-web/src/components/: DownloadForm.tsx  DownloadStatus.tsx  FileList.tsx  PWAInstaller.tsx
frontend-web/src/components/__tests__/: DownloadForm.test.tsx  DownloadStatus.test.tsx  FileList.test.tsx
frontend-web/src/lib/: api.ts
frontend-web/src/lib/__tests__/: api.test.ts
tests/: conftest.py  test_api.py  test_autocleanup.py  test_cleanup.py  test_cleanup_api.py  test_config.py  test_file_router.py  test_file_storage.py  test_job_storage.py  test_video_info.py  test_youtube_service.py
